--- a/public/netlify.toml
+++ b/public/netlify.toml
@@ -1,8 +1,2 @@
 [build]
-  command = "CI= npm run build"
-  publish = "build"
-
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
+  publish = "."
